--- a/filmes/src/components/footer/Footer.css
+++ b/filmes/src/components/footer/Footer.css
@@ -1,6 +1,6 @@
 footer{
-    background-color:#cc3f55 ;
-    color: white;
+    background-color:#ffffff ;
+    color: rgb(0, 0, 0);
     display: flex;
     justify-content: center;
     align-items: center;
