--- a/filmes/src/components/header/Header.css
+++ b/filmes/src/components/header/Header.css
@@ -28,16 +28,25 @@ header{
     text-decoration: none;
 }
 
+
 @media screen and (max-width: 768px) {
-    .cabecalho img{
-        height: 35px;
+    .header-header img{
+        height: 15px;
     }
-    .link_header{
-        margin-left: 15px;
+    .header-header{
+        justify-content: center;
+        align-items: center;
     }
+    .link-header{
+        display: none;
+    }
+    .navas_header{
+        display: none;
+    }
+}
 
     
-}
+
 /*Seletor
     . = classe
     # = id
@@ -50,8 +59,10 @@ header{
     }
 
     a.Adm {
-        margin-left: 170px;
+        margin-top: 60px;
+        margin-left: 120px;
         margin-right: 30px;
+        color: black;
     }
 
     a {
