--- a/filmes/src/pages/cadastroEventos/CadastroEvento.css
+++ b/filmes/src/pages/cadastroEventos/CadastroEvento.css
@@ -1,4 +1,4 @@
-/* h1 {
+h1 {
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -38,4 +38,4 @@ input[type="password"] {
     border-left: none;
     border-right: none;
     border-top: none;
-} */
+}
