--- a/filmes/src/pages/cadastroTipoEvento/cadastroTipoEvento.css
+++ b/filmes/src/pages/cadastroTipoEvento/cadastroTipoEvento.css
@@ -59,20 +59,6 @@
     height: 410px;
 }
 
-@media screen and (max-width: 880px){
-    .campos_input{
-        flex-direction: column;
-        align-items: center;
-        
-    }
-    .banner_cadastro{
-        display: none;
-    }
-}
-
-@media screen and (max-width: 340px) {
-    .form_cadastro h1 {
-        font-size: 18px;
-    }
-    
+section.layout_grid.listagem {
+    background-color: #B51D44;
 }
