--- a/filmes/src/components/cadastro/Cadastro.css
+++ b/filmes/src/components/cadastro/Cadastro.css
@@ -1,61 +1,104 @@
-.cadastro_titulo {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    
-    font-size: 16px;
-    margin-top: 30px;
-    margin-bottom: 4px;
-}
+.section_cadastro {
+    color: black;
 
-.cadastro_titulo h1 {
-    font-size: 30px;
-    margin-bottom: 10px;
+    padding: 50px 0;
 }
-
-.cadastro_titulo hr {
-    width: 180px;
-    border: 1px solid #B51D44;
-    margin-bottom: 40px;
-}
-
 
 .form_cadastro {
     display: flex;
-    justify-content: space-around;
+    flex-direction: column;
     align-items: center;
-    /* flex-direction: column; */
 }
 
 .form_cadastro h1 {
     text-transform: uppercase;
-    font-size: 16px;
+    font-size: medium;
 }
 
-.campo_cad_nome input{
-    margin-bottom: 70px;
-    width: 356px;
+.form_cadastro hr {
+    max-width: 100px;
+    width: 100%;
+    border-style: solid;
+    border-width: 1px;
+    border-color: #ad0729;
+    margin-top: 5px;
+}
+
+.campos_cadastro {
+    display: flex;
+    align-items: center;
+
+    padding-top: 50px;
+    gap: 25px;
+}
+
+/* Modificando o input e select */
+
+.campo_cad_nome input,
+.campo_cad_evento select {
+    border-radius: 6px;
+    outline: none;
+    padding: 0 5px;
+    width: 300px;
+    height: 30px;
+    margin-top: 7px;
+}
+
+.campo_cad_nome input,
+.campo_cad_evento select,
+.campo_cad_evento textarea {
+    display: flex;
+    margin: 30px;
+
     border-top: none;
-    border-left: none;
     border-right: none;
+    border-left: none;
     outline: none;
 }
 
-.campo_cad_genero select{
-    margin-bottom: 70px;
-    width: 356px;
-    border-top: none;
-    border-left: none;
-    border-right: none;
-    outline: none;
+.campo_cad_evento {
+    /* margin-bottom: 30px; */
+    color: gray;
 }
 
-.img_cadastro {
-    height: 238px;
-    width: 436px;
+.campo_preen {
+    display: flex;
+    flex-direction: column;
+    /* justify-content: center; */
+    place-items: center;
+
+    padding: 0 30px 30px 30px;
+
 }
 
-.section_cadastro {
-    height: 410px;
+
+.campo_cad_evento textarea{
+    width: 300px;
+    max-width: 300px;
+    flex-wrap: wrap;
+    border-radius: 6px;
+      padding: 0 5px;
 }
 
+
+@media screen and (max-width: 880px) {
+    .campos_cadastro {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .banner_cadastro {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 430px) {
+    .form_cadastro h1 {
+        font-size: 20px;
+    }
+
+    .campo_preen,
+    .campo_cad_nome {
+        padding: 0px 0px 0px 0px;
+    }
+}
