--- a/filmes/src/components/footer/Footer.css
+++ b/filmes/src/components/footer/Footer.css
@@ -1,8 +1,15 @@
-footer{
-    background-color:#ffffff ;
-    color: rgb(0, 0, 0);
+footer {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 60px;
+    text-align: center;
+
+    height: 40px;
+}
+
+@media screen and (max-width: 768px){
+    footer {
+        height: 39px;
+        font-size: 14px;
+    }
 }
