--- a/filmes/src/components/header/Header.css
+++ b/filmes/src/components/header/Header.css
@@ -1,62 +1,58 @@
-/* background-color: #cc3f55; */
-header{
-    background-color: #ffffff;
-    height: 75px;
+header {
+    background-color: white;
 
-    /* Borda: */
-    box-shadow: 1px 4px 4px 0px #00000055;
+    height: 85px;
+    width: 100%;
+
+    /* Borda */
+    box-shadow: 1px 4px 4px 0px #00000045;
     position: relative;
 }
 
 .cabecalho {
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    width: 80%;
-    height: 100%;
-    margin-left: 150px;
+    justify-content: space-between;
+
+    width: 100%;
+    height: 85px;
 }
 
-.cabecalho img{
-    height: 55px;
-    height: 100%;
-}
 
-.link_header{
-    margin-left: 55px;
-    color: white;
+.logo_header {
+    height: 20px;
+    width: 115px;
+    display: flex;
+    align-self: center;
+}   
+
+.link_header {
+    font-size: 15px;
+    margin-right: 80px;
+    color: black;
     text-decoration: none;
+}   
+
+.nav_img img {
+    margin-left: -70px;
+    /* display: flex;
+    justify-content: center;
+    align-items: center; */
 }
 
+.login {
+    background-color: #b51d44;
+    width: 115px;
+    height: 45px;
+    border-radius: 5px;
+    padding: 5px;
 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
-    
-
-/*Seletor
-    . = classe
-    # = id
-    tag = tag
-    🦈👟✈️🐊*/
-
-    nav.nav_header {
-        display: flex
-    ;
-    }
-
-    a.Adm {
-        margin-top: 60px;
-        margin-left: 120px;
-        margin-right: 30px;
-        color: black;
-    }
-
-    a {
-        margin-left: 50px;
-        color: black;
-        text-decoration: none;
-    }
-
-    img.logoHeader {
-        width: 200px;
-        height: 30px;
-    }   
+.logar {
+    text-decoration: none;
+    color: white;
+}
