--- a/filmes/src/components/lista/Lista.css
+++ b/filmes/src/components/lista/Lista.css
@@ -1,64 +1,120 @@
-.listagem{
-    /*retirar : header:75px, cadastro:252px, footer:40px;*/
-    min-height: calc(100vh - (75px + 252px + 40px));
+.listagem {
+    background-color: #b51d44;
+    min-height: calc(100vh - (75px + 399px + 40px));
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 35px;
-    background-color: #b51d44;
-}
-.listagem h1{
-    text-transform: uppercase;
-    color: white;
+    padding: 40px 0;
 }
 
-.tabela{
+.listagem h1 {
+    color: white;
+    font-size: 20px;
+    font-weight: 500;
+}
+
+.linha_titulo {
+    max-width: 150px;
+    width: 100%;
+    border-style: solid;
+    border-width: 1px;
+    border-color: white;
+    margin-top: 5px;
+    margin-bottom: 20px;
+}
+
+.item_lista img {
+    height: 15px;
+}
+
+.tabela {
     width: 100%;
     margin-top: 30px;
 }
 
-.listagem hr{
-    max-width: 300px;
+.tabela table {
     width: 100%;
-    margin-top: 7px;
-    border-width: 2px;
-    border-style: solid;
-    border-color: #ffffff;
-}
-
-.item_lista img{
-        height: 28px;
-}
-.tabela table{
-    width: 100%;
-
     border-collapse: collapse;
 }
 
-.tabela .table_cabecalho:first-child{
+.tabela_cabecalho :first-child {
     width: 300px;
 }
 
-.tabela.table_cabecalho :nth-child(2){
+.tabela_cabecalho :nth-child(2) {
     width: 200px;
 }
-.tabela .table_cabecalho th{
+
+.tabela_cabecalho :nth-child(3) {
+    width: 200px;
+}
+
+.tabela_cabecalho th {
     width: 100px;
-    color: white;
-    border-bottom: 1px solid 
+    font-weight: 500;
 }
 
-.item_lista td{
-    padding: 20px 0 5px 0;
+.item_lista td {
+    padding: 20px 0 10px 0;
     color: white;
 }
 
-.item_lista{
+.item_lista {
     text-align: center;
-    margin-top: 1000px;
     border-bottom: solid 1px #73061B20;
+    justify-content: flex-start;
 }
 
+.item_lista td {
+    font-weight: 400;
+}
+
+.tabela_cabecalho th {
+    color: white;
+    font-size: small;
+    padding-bottom: 5px;
+}
+
+.tabela_cabecalho {
+    border-bottom: white 1px solid;
+}
+
+.item_lista {
+    border-bottom: white 1px solid;
+}
+
+@media screen and (max-width: 768px) {
+
+    .tabela thead {
+        display: none;
+    }
 
 
+    .item_lista td {
+        display: grid;
+        text-align: left;
+        padding: 10px 10px 10px 0;
+        grid-template-columns: 10ch auto;
 
+    }
+
+
+    .item_lista td::before {
+        content: attr(data-cell) ":";
+        font-weight: 600;
+        width: 80px;
+        text-align: left;
+    }
+
+    .item_lista td:last-child {
+        margin-bottom: 24px;
+    }
+
+    .item_lista td:first-child {
+        margin-top: 24px;
+    }
+}
+
+.botao_edicao img{
+    cursor: pointer;
+}
